[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/buttons/btn2-state1.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/btn1-state1.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/btn1-state2.png" type="Texture" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/buttons/btn2-state2.png" type="Texture" id=5]
[ext_resource path="res://assets/403970123_203114046100340_6409654091407568398_n.jpg" type="Texture" id=6]
[ext_resource path="res://assets/buttons/btn3-state1.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/btn3-state2.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/bg.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/shell.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/settings-combined-state2.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/pearl button.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/settings-combined-state1.png.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/pearl when pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/pearl hovered.png" type="Texture" id=15]

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 9012, 9012 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 9012, 9012 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 383, 383 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 414, 220 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 414, 220 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 414, 220 )

[sub_resource type="StyleBoxTexture" id=4]
resource_local_to_scene = true
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 446, 220 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 446, 220 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 446, 220 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 504, 252 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 504, 252 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 504, 252 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 300, 390 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 300, 390 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 300, 390 )

[sub_resource type="ButtonGroup" id=12]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="PearlButton1" type="Button" parent="Control"]
margin_left = 392.0
margin_top = 413.0
margin_right = 549.0
margin_bottom = 562.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="PearlButton2" type="Button" parent="Control"]
margin_left = 552.0
margin_top = 404.0
margin_right = 709.0
margin_bottom = 553.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="PearlButton3" type="Button" parent="Control"]
margin_left = 713.0
margin_top = 413.0
margin_right = 870.0
margin_bottom = 562.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="NewGame" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 398.0
margin_top = 516.0
margin_right = -738.0
margin_bottom = -124.0
rect_clip_content = true
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="LoadGame" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 556.0
margin_top = 509.0
margin_right = -564.0
margin_bottom = -131.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="ChangeAppearance" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 716.0
margin_top = 518.0
margin_right = -404.0
margin_bottom = -122.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="Settings" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1149.0
margin_top = 5.0
margin_bottom = -595.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 13 )
group = SubResource( 12 )

[node name="tutorial" type="Button" parent="Control"]
margin_left = 19.0
margin_top = 13.0
margin_right = 87.0
margin_bottom = 40.0
text = "tutorial"

[node name="FG" type="CanvasLayer" parent="."]
layer = 0

[node name="ChangeTextureOfThis" type="Sprite" parent="FG"]
visible = false
position = Vector2( 208, 262 )
texture = ExtResource( 6 )

[node name="bg" type="CanvasLayer" parent="."]
layer = -14

[node name="Background2" type="Sprite" parent="bg"]
position = Vector2( 642, 361 )
scale = Vector2( 0.212833, 0.213037 )
texture = ExtResource( 9 )

[node name="Shell" type="Sprite" parent="bg"]
position = Vector2( 632, 444 )
scale = Vector2( 0.359207, 0.328214 )
texture = ExtResource( 10 )

[connection signal="pressed" from="Control/PearlButton1" to="." method="_on_PearlButton1_pressed"]
[connection signal="pressed" from="Control/PearlButton2" to="." method="_on_PearlButton1_pressed"]
[connection signal="pressed" from="Control/PearlButton2" to="." method="_on_PearlButton2_pressed"]
[connection signal="pressed" from="Control/PearlButton3" to="." method="_on_PearlButton1_pressed"]
[connection signal="pressed" from="Control/PearlButton3" to="." method="_on_PearlButton3_pressed"]
[connection signal="pressed" from="Control/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Control/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Control/ChangeAppearance" to="." method="_on_ChangeAppearance_pressed"]
[connection signal="pressed" from="Control/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Control/tutorial" to="." method="_on_tutorial_pressed"]
